# web-app-treino-back

./: .gitignore  Dockerfile  README.md  pyproject.toml
appTreinoBackend/: manage.py
appTreinoBackend/appTreinoBackend/: asgi.py  settings.py  urls.py  wsgi.py
appTreinoBackend/treinos/: urls.py
appTreinoBackend/treinos/migrations/: 0001_initial.py  0002_rename_exercicio_id_exercicios_id.py  0003_alter_exercicios_tecnica_avanc.py  0004_exercicios_treino_delete_exerciciointreino.py  0005_rename_id_exercicios_exercicio_id.py  0006_alter_exercicios_treino.py  0007_alter_exercicios_treino.py  0008_rename_exercicio_id_exercicios_id.py  0009_alter_exercicios_options.py  0010_alter_exercicios_options_alter_treinos_options_and_more.py  0011_alter_exercicios_agrup_musc.py  0012_alter_exercicios_agrup_musc_and_more.py  0013_alter_exercicios_agrup_musc_and_more.py  0014_alter_exercicios_agrup_musc_and_more.py
appTreinoBackend/treinos/models/: __init__.py  exercicio_treino.py  exercicios.py  treinos.py
appTreinoBackend/treinos/serializers/: __init__.py  serializer_exercicios.py  serializer_treinos.py
appTreinoBackend/treinos/views/: __init__.py  view_exercicios.py  view_treinos.py
