[tool.poetry]
name = "web-app-treino"
version = "0.1.0"
description = ""
authors = ["Henrique Sanfilippo <henrique.sanfilippo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.1"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
